--- a/package.json
+++ b/package.json
@@ -1,44 +1,45 @@
 {
-  "name": "proyect",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@mui/material": "^5.0.6",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "node-sass": "^6.0.1",
-    "react": "^17.0.2",
-    "react-datepicker": "^4.2.1",
-    "react-dom": "^17.0.2",
-    "react-images-uploading": "^3.1.3",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "react-table-scrollbar": "^0.1.11",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "proyect",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@mui/material": "^5.0.6",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "node-sass": "^6.0.1",
+        "react": "^17.0.2",
+        "react-datepicker": "^4.2.1",
+        "react-dom": "^17.0.2",
+        "react-google-maps": "^9.4.5",
+        "react-images-uploading": "^3.1.3",
+        "react-router-dom": "^5.3.0",
+        "react-scripts": "4.0.3",
+        "react-table-scrollbar": "^0.1.11",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    }
 }
