--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "@testing-library/react": "^11.2.7",
         "@testing-library/user-event": "^12.8.3",
         "google-maps-react": "^2.0.6",
+        "highcharts": "^9.3.1",
+        "highcharts-react-official": "^3.1.0",
+        "mapbox-gl": "^2.6.1",
         "node-sass": "^6.0.1",
         "react": "^17.0.2",
         "react-datepicker": "^4.3.0",
